--- a/清单.md
+++ b/清单.md
@@ -1,5 +1,7 @@
 ------
 
+Java基础 → Spring生态 → 数据库 → Web开发 → 分布式 → 高并发 → 架构设计
+
 ### 1. **Java 基础与核心概念**
 
 - **面向对象编程**：继承、多态、封装、接口、抽象类。
@@ -29,87 +31,53 @@
 - **NoSQL 数据库**：Redis、MongoDB、Cassandra 等。
 - **分布式数据库与分库分表**：Sharding、数据库高可用（主从复制、分区）。
 
-### 4. **Web 开发与网络编程**
+#### **4. Web开发与网络编程**
 
-- **HTTP 协议**：请求方法（GET、POST、PUT、DELETE）、请求头、响应头、状态码。
-- **Servlet 与 JSP**：Servlet 生命周期、过滤器、监听器、JSP 标签。
-- **RESTful API 设计**：如何设计和实现 RESTful Web 服务。
-- **WebSocket**：实时双向通信。
-- **API 文档**：使用 Swagger、OpenAPI 自动生成 API 文档。
-- **异步编程**：使用异步框架如 `CompletableFuture`。
-
-### 5. **分布式系统与微服务**
-
-- **微服务架构**：服务拆分、单一职责、服务间通信。
-- **Spring Cloud**：服务注册与发现（Eureka、Consul）、客户端负载均衡（Ribbon）、断路器（Hystrix）、配置管理（Spring Cloud Config）。
-- **消息队列**：Kafka、RabbitMQ、ActiveMQ。
-- **服务网关**：Zuul、Spring Cloud Gateway。
-- **分布式事务**：事务管理、Saga 模式、补偿机制。
-- **容错与高可用**：服务降级、负载均衡、自动化容错。
-
-### 6. **缓存与性能优化**
-
-- **缓存原理**：缓存一致性、缓存失效、缓存穿透、缓存雪崩。
-- **缓存技术**：Redis、Memcached、Ehcache。
-- **JVM 性能调优**：内存管理、GC 调优、JVM 参数配置。
-- **数据库性能优化**：索引设计、SQL 查询优化、数据库连接池、读写分离。
-- **应用性能监控**：使用 `jvisualvm`、`jconsole`、Prometheus 等工具监控应用性能。
-
-### 7. **安全性**
-
-- **身份认证与授权**：OAuth2、JWT、SSO（单点登录）。
-- **常见安全漏洞**：SQL 注入、XSS、CSRF、会话劫持。
-- **加密与解密**：AES、RSA、SHA、MD5 等加密算法。
-- **防火墙与防御机制**：防止 SQL 注入、跨站脚本攻击、路径遍历等。
-- **应用安全测试**：使用 OWASP ZAP 等工具进行安全扫描。
-
-### 8. **构建与部署**
-
-- **构建工具**：Maven、Gradle、Ant。
-- **持续集成与持续部署**：Jenkins、GitLab CI/CD、Travis CI。
-- **Docker 与容器化**：使用 Docker 创建、管理、部署容器化应用。
-- **Kubernetes**：容器编排、集群管理、自动扩展。
-- **部署与运维**：自动化部署、蓝绿部署、滚动更新、应用监控。
-
-### 9. **测试与质量保证**
-
-- **单元测试**：JUnit、Mockito、TestNG。
-- **集成测试**：Spring Test、数据库集成测试。
-- **测试驱动开发（TDD）**：编写测试用例驱动开发。
-- **代码质量工具**：SonarQube、Checkstyle、PMD、Jacoco（代码覆盖率）。
-- **负载测试与压力测试**：JMeter、Gatling、Locust。
-
-### 10. **日志与监控**
-
-- **日志框架**：Logback、Log4j 2、SLF4J。
-- **日志集中化**：ELK Stack（Elasticsearch、Logstash、Kibana）、Graylog。
-- **应用监控**：Prometheus、Grafana、Spring Boot Actuator。
-- **分布式追踪**：Zipkin、Jaeger。
-
-### 11. **版本控制与协作**
-
-- **Git**：Git 分支管理、Git Flow、GitLab/GitHub。
-- **代码审查与协作**：Pull Request、代码合并、解决冲突。
-- **团队协作工具**：Jira、Confluence、Trello、Slack。
-
-### 12. **设计模式与架构**
-
-- **常用设计模式**：单例模式、工厂模式、观察者模式、策略模式等。
-- **系统设计**：微服务设计、分布式架构、服务解耦、缓存策略、负载均衡。
-- **领域驱动设计（DDD）**：实体、值对象、聚合根、仓储等。
-
-### 13. **容器与虚拟化**
-
-- **Docker**：Docker 容器化、镜像构建与管理、容器间通信。
-- **Kubernetes**：容器编排、服务发现、自动扩展、集群管理。
-- **虚拟化技术**：VMware、VirtualBox、KVM。
-
-### 14. **异步与事件驱动架构**
-
-- **异步编程**：`CompletableFuture`、`ExecutorService`、`Future`。
-- **事件驱动架构**：消息队列、事件流处理。
-- **异步 I/O**：NIO、AIO、Netty。
+- HTTP协议与RESTful设计
+- Spring MVC与WebFlux响应式编程
+- 异步非阻塞与网络优化
+- Web安全防御
 
 ------
+
+#### **5. 分布式系统与微服务**
+
+- 微服务拆分与通信模式
+- Spring Cloud Alibaba生态
+- 分布式事务
+- 云原生与服务网格
+
+------
+
+#### **6. 缓存与高并发优化**
+
+- 多级缓存架构
+- Redis高阶实战
+- JVM调优与内存管理
+- 高并发设计
+
+------
+
+#### **7. 系统安全与合规**
+
+- 认证与授权
+- 安全防御
+- 隐私合规
+
+------
+
+#### **8. 云原生与DevOps**
+
+- Kubernetes进阶
+- CI/CD自动化
+- 监控与日志体系
+
+------
+
+#### **9. 架构设计与大厂实战**
+
+- 领域驱动设计
+- 高并发系统
+- 云原生架构模式
 
  **Java 后端开发工程师**需要不仅仅掌握 Java 的基本语法和面向对象思想，还需要具备设计、构建、优化高并发、高可用、高性能的系统的能力。学习如何在微服务架构、分布式系统、数据库优化、缓存、日志监控、以及与团队的协作中提供最佳的技术方案和架构设计。掌握构建、部署、监控和测试的工具，才能确保系统的稳定运行。
