添加架构设计与大厂实战:领域驱动设计,高并发系统，云原生架构

--- a/清单.md
+++ b/清单.md
@@ -1,6 +1,6 @@
 ------
 
-Java基础 → Spring生态 → 数据库 → Web开发 → 分布式 → 高并发 → 架构设计
+Java基础 → Spring生态 → 数据库 → Web开发 → 分布式 → 高并发 → 系统安全与合规 → 云原生→架构设计
 
 ### 1. **Java 基础与核心概念**
 
