修改面试篇:并发与多线程

--- a/mian/1.Java基础与核心概念/并发与多线程.md
+++ b/mian/1.Java基础与核心概念/并发与多线程.md
@@ -2,7 +2,7 @@
 
 ## 什么是线程？线程和进程的区别是什么？  
 
-**线程** 是程序执行的最小单位，它是 CPU 调度和执行的基本单元。一个进程可以包含多个线程，这些线程共享进程的资源（如内存），但每个线程有自己的栈和程序计数器。
+**线程** 是程序执行的最小单位，它是 CPU 调度和执行的基本单元。一个进程可以包含多个线程，这些线程共享进程的资源（如内存），但每个线程有自己的栈和程序计数器
 
 **线程和进程的区别**：
 
