修改面试篇：集合杂记

--- a/mian/1.Java基础与核心概念/杂记-集合.md
+++ b/mian/1.Java基础与核心概念/杂记-集合.md
@@ -22,4 +22,4 @@
 
 因为它的底层使用的Arrays类中的一个内部类ArrayList来构造的集合,在这个集合的构造器中,把我们传入的这个集合进行了包装而已,最终指向的都是同一个内存地址。
 
-通过list.toArray可以把集合转化为数组，是深拷贝，在底层进行了数组的拷贝。
+通过list.toArray可以把集合转化为数组，是深拷贝，在底层进行了数组的拷贝
